--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>React Apollo Flexi Table</title>
+    <title>React Draggable Element List</title>
     <meta charset='utf-8' />
     <meta name='viewport' content='initial-scale=1, maximum-scale=1' />
     <style>
